Fix footer alignment

--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,7 @@
 
 .page-footer .container {
   display: flex;
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 .footer-info {
